After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752190 - JNI: jaw_table_cell_get_column_span is missing
JNI: jaw_table_cell_get_column_span is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other All
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-09 19:10 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-10 10:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wrapper: Create getColumnSpan in AtkTableCell (927 bytes, patch)
2015-07-10 10:46 UTC, Magdalen Berns (irc magpie)
committed Details | Review
JNI Create jaw_table_cell_get_column_span (2.08 KB, patch)
2015-07-10 10:47 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Update HACKING (575 bytes, patch)
2015-07-10 10:48 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-09 19:10:27 UTC
The implementation for this is a bit fiddly but it may still be useful to have.

https://git.gnome.org/browse/atk/tree/atk/atktablecell.h#n63
Comment 1 Magdalen Berns (irc magpie) 2015-07-10 10:46:55 UTC
Created attachment 307215 [details] [review]
Wrapper: Create getColumnSpan in AtkTableCell
Comment 2 Magdalen Berns (irc magpie) 2015-07-10 10:47:54 UTC
Created attachment 307216 [details] [review]
JNI Create jaw_table_cell_get_column_span
Comment 3 Magdalen Berns (irc magpie) 2015-07-10 10:48:30 UTC
Created attachment 307217 [details] [review]
Update HACKING